/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 16:55 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

/*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Old changelogs are archived in directory
 "oldlogs".
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/
2025-12-12 17:41 UTC-0300 ItamarLins itamarlins at gmail.com
  * source/cross/common.prg   
  ! Fix for rebuild GetList recursively to support nested containers (e.g., TAB inside TAB).
  ! Fix send by deividdjs forum hwgui https://pctoledo.org/viewtopic.php?p=170608#p170608

2025-12-08 01:14 UTC-0300 ItamarLins itamarlins at gmail.com
  * source/gtk/hbrowse.prg
  ! Fix for erase header of browse while append a record

2025-12-07 03:36 UTC-0300 ItamarLins itamarlins at gmail.com
  * source/gtk/hbrowse.prg
  ! Fix memo edit crash after save. VldBrwEdit() a line comment out
  ! add alias dbunlock() for memo field

2025-12-06 15:20 UTC-0300 ItamarLins itamarlins at gmail.com
  * source/gtk/hbrowse.prg
  ! Fix the LineLeft and LineRight methods that were skipping more than one column.

2025-12-05 13:55 UTC-0300 ItamarLins itamarlins at gmail.com
  * source/gtk/hbrowse.prg
    ! Fix for display the bitmap correctly in the browser.
    ! Piece of code borrowed \winapi\hbrowse.prg

2025-12-04 23:38 UTC-0300 ItamarLins itamarlins at gmail.com
   * source/gtk/hbrowse.prg
   ! Fix for Refresh() Method MouseWeel GTK This Method not work.
   ! GTK Not exist this event -> msg == WM_MOUSEWHEEL

2025-12-03 16:30 UTC+0200 Wilfried Brunken DF7BE
* Install_Knoppix.txt (New) 
  ! Installation instructions for
  ! Knoppix V 9.1 by
  ! Dipl.-Ing. Klaus Knopper.
  ! (https://www.knopper.net/)
  ! The short Readme contains a link
  ! to CLLOG, where the full 
  ! instructions are hosted and the
  ! GTK2 source code file to
  ! add the missing GTK2 -dev package
  ! from source c


2025-12-01 11:20 UTC+0300 Alexander Kresin <alex@belacy.ru>